# pysnyk

./: .gitignore  .travis.yml  Pipfile  ProjectDependenciesReport.py  README.md  SnykAPI.py  api-demo-1-list-projects.py  api-demo-10-project-dependencies-and-licenses-report.py  api-demo-10-project-deps-licenses-report.py  api-demo-11-update-github-checks.py  api-demo-2-list-issues.py  api-demo-2b-issues-analytics.py  api-demo-3-list-dependencies.py  api-demo-3c-dependencies-health.py  api-demo-4-list-licenses-by-org.py  api-demo-5-test-java-package.py  api-demo-5-test-package.py  api-demo-5b-test-rubygem-package.py  api-demo-5c-test-python-package.py  api-demo-5d-test-npm-package.py  api-demo-6-find-issues-without-jira-tickets.py  api-demo-7-import-github-repo.py  api-demo-8-delete-projects-by-name.py  api-demo-9-list-ignores.py  deprecated-api-demo-10-project-dependencies-and-licenses-report.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  test.py
.github/workflows/: release.yml  test.yml
examples/: Dockerfile  OrgVulnReport.py  ProjectDependenciesReport.py  README.md  api-demo-1-list-projects.py  api-demo-10-project-deps-licenses-report.py  api-demo-11-add-tag-projects.py  api-demo-11-update-github-checks.py  api-demo-12-delete-projects-by-origin-and-age  api-demo-13-bulk-set-criticality.py  api-demo-2-list-issues.py  api-demo-2b-issues-analytics.py  api-demo-2c-list-issues-aggregated.py  api-demo-3-list-dependencies.py  api-demo-3c-dependencies-health.py  api-demo-4-list-licenses-by-org.py  api-demo-5-test-java-package.py  api-demo-5b-test-rubygem-package.py  api-demo-5c-test-python-package.py  api-demo-5d-test-npm-package.py  api-demo-6-find-issues-without-jira-issue.py  api-demo-6-find-issues-without-jira-issues.py  api-demo-6-find-issues-without-jira-tickets.py  api-demo-6b-create-jira-issue-for-issues.py  api-demo-6b-create-jira-issues-for-issues.py  api-demo-6b-create-jira-tickets-for-issues.py  api-demo-7-import-github-repo.py  api-demo-8-delete-projects-by-name.py  api-demo-8-delete-projects-by-origin copy.py  api-demo-8-delete-projects-by-type.py  api-demo-9-list-ignores.py  api-demo-9b-ignore-vulns-by-id.py  api-demo-9c-bulk-ignore-vulns-by-issueIdList.py  api-demo-9d-ignore-issue-by-project-csv.py  test_utils.py  utils.py
pysnyk/: __init__.py  client.py
snyk/: __init__.py  __version__.py  cli.py  client.py  errors.py  managers.py  models.py  test_cli.py  test_client.py  test_manager.py  test_models.py  test_utils.py  utils.py
(+6 files in other folders)
