[tool.poetry]
name = "pysnyk"
version = "0.1.3"
description = "A Python client for the Snyk API"
authors = [
  "Gareth Rushgrove <garethr@snyk.io>",
]
license = "MIT"
packages = [
  { include = "snyk" },
]
readme = "README.md"
repository = "https://github.com/snyk-labs/pysnyk"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.22"
mashumaro = "^1.7"
poetry-version = "^0.1.3"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
pytest-black = "^0.3.7"
pytest-cov = "^2.7"
pytest-mypy = "^0.3.2"
requests-mock = "^1.6"
xlsxwriter = "^1.1.8"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
