[tool.poetry]
name = "pysnyk"
version = "0.8.1"
description = "A Python client for the Snyk API"
authors = [
  "Gareth Rushgrove <garethr@snyk.io>",
]
license = "MIT"
packages = [
  { include = "snyk" },
]
readme = "README.md"
repository = "https://github.com/snyk-labs/pysnyk"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.22"
mashumaro = "^3"
importlib_metadata = "^4.4"
retry = "^0.9.2"
deprecation = "^2.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-black = "^0.3.10"
pytest-cov = "^3.0.0"
pytest-mypy = "^0.9.1"
requests-mock = "^1.7"
xlsxwriter = "^1.1.8"
pytest-isort = "^1.1.0"
black = "^19.10b0"
types-requests = "^2.27.10"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
line_length = 88
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

